[gd_scene load_steps=7 format=3 uid="uid://drpjbbs0boxa1"]

[ext_resource type="Script" path="res://src/SummoningCircle.gd" id="1_2bpyk"]
[ext_resource type="Texture2D" uid="uid://b1qddaqfurwk0" path="res://sprites/MC_Sample_1.png" id="2_oshkp"]
[ext_resource type="Texture2D" uid="uid://dur5y3afox6ry" path="res://sprites/Demons/soul.png" id="3_ihi3e"]
[ext_resource type="Texture2D" uid="uid://c6gcjxsewwb1a" path="res://material_texture/horn.tres" id="4_5wxsp"]
[ext_resource type="Texture2D" uid="uid://dajq7nleuhq3j" path="res://material_texture/wing.tres" id="5_81st7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fs4fm"]
size = Vector2(125, 125)

[node name="SummoningCircle" type="Area2D"]
collision_layer = 0
collision_mask = 257
script = ExtResource("1_2bpyk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_fs4fm")

[node name="Sprite" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 62.0
offset_top = 62.0
offset_right = 254.0
offset_bottom = 254.0
grow_horizontal = 2
grow_vertical = 2
rotation = 3.14159
scale = Vector2(0.646054, 0.646054)
texture = ExtResource("2_oshkp")
stretch_mode = 5

[node name="IngredientAmount1" type="Label" parent="."]
offset_left = -9.0
offset_top = -74.0
offset_right = 10.0
offset_bottom = -51.0
text = "99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="IngredientAmount1"]
layout_mode = 0
offset_top = -10.0
offset_right = 16.0
offset_bottom = 6.0
texture = ExtResource("3_ihi3e")
expand_mode = 3
stretch_mode = 5

[node name="IngredientAmount2" type="Label" parent="."]
visible = false
offset_left = -28.0
offset_top = -119.0
offset_right = -9.0
offset_bottom = -96.0
text = "99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="IngredientAmount2"]
layout_mode = 0
offset_top = -10.0
offset_right = 16.0
offset_bottom = 6.0
texture = ExtResource("3_ihi3e")
expand_mode = 3
stretch_mode = 5

[node name="IngredientAmount3" type="Label" parent="."]
visible = false
offset_left = 20.0
offset_top = -108.0
offset_right = 39.0
offset_bottom = -85.0
text = "99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="IngredientAmount3"]
layout_mode = 0
offset_top = -10.0
offset_right = 16.0
offset_bottom = 6.0
texture = ExtResource("3_ihi3e")
expand_mode = 3
stretch_mode = 5

[node name="IngredientAmount4" type="Label" parent="."]
offset_left = 56.0
offset_top = 10.0
offset_right = 75.0
offset_bottom = 33.0
text = "99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="IngredientAmount4"]
layout_mode = 0
offset_top = -10.0
offset_right = 16.0
offset_bottom = 6.0
texture = ExtResource("4_5wxsp")
expand_mode = 3
stretch_mode = 5

[node name="IngredientAmount5" type="Label" parent="."]
offset_left = -72.0
offset_top = 10.0
offset_right = -53.0
offset_bottom = 33.0
text = "99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="IngredientAmount5"]
layout_mode = 0
offset_top = -10.0
offset_right = 16.0
offset_bottom = 6.0
texture = ExtResource("5_81st7")
expand_mode = 3
stretch_mode = 5

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
